[project]
name = "alembic-sqlalchemy"
version = "0.1.0"
description = "Example of using Alembic with the SQLAlchemy ORM."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "environs>=14.3.0",
    "sqlalchemy>=2.0.42",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = [".venv", "alembic"]

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT", "E501"]

[tool.ruff.format]
quote-style = "single"

[tool.taskipy.tasks]
format = "ruff check --fix && ruff format ."
migrate = "alembic revision --autogenerate && alembic upgrade head"
clear-migrations = "rm -rf alembic/versions/*"
